reports/prakticheskaya_6/deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: hello-node 
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      app: hello-node 
  template: 
    metadata: 
      labels: 
        app: hello-node 
    spec: 
      containers: 
      - name: hello-node 
        image: hello-node:v1 
        ports: 
        - containerPort: 8080
