reports/prakticheskaya_6/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-node-service
spec:
  selector:
    app: hello-node
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
