reports/prakticheskaya_6/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-node-ingress
spec:
  rules:
  - host: hello-node.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-node-service
            port:
              number: 8080
